--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "swearfilter",
   "version": "0.0.4",
-  "description": "Detect Swear Words, and Handle Strings Containing Them. Smart Detection helps to Detect Words using Leetspeak, or any other Word Circumvention Methods.",
+  "description": "Detect swear words, and handle strings containing them. Smart Detection helps to detect words using leetspeak, or any other word circumvention methods.",
   "main": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
