--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.5",
   "description": "Detect swear words, and handle strings containing them. Smart Detection helps to detect words using leetspeak, or any other word circumvention methods.",
   "main": "./src/index.js",
+  "types": "./src/typings/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
