--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.0.6",
   "description": "Detect swear words, and handle strings containing them. Smart Detection helps to detect words using leetspeak, or any other word circumvention methods.",
   "main": "./src/index.js",
-  "types": "./src/typings/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -26,8 +25,5 @@
     "discord.js-swearfilter"
   ],
   "author": "WillTDA",
-  "license": "ISC",
-  "dependencies": {
-    "@cityssm/unleet": "^1.0.3"
-  }
+  "license": "Apache-2.0"
 }
